# coursework-1

./: Makefile  README.md  pyproject.toml
coursework_1/: __init__.py  config.py  dataset.py  download_data.py  plots.py
coursework_1/modeling/: early_stopping.py  losses.py  metrics.py  predict.py  train.py
models/: unet.py
notebooks/: coursework.ipynb  coursework_dirty.ipynb
tests/: test_data.py  test_metrics.py  test_model.py
